test/types/cptr/cross_type_init.chpl
use CPtr;

var x: c_ptr(int);
var y: c_ptr(uint) = x;
